--- a/style.css
+++ b/style.css
@@ -1,65 +1,67 @@
 /* Basic Style */
-body {
+li,
+h3 {
+ list-style: none;
+}
+
+input,
+button {
+   outline: none;
+}
+.wrapper {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header__image {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header__info-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
 
-.aaa { 
+.header { 
   text-align: center;
 }
 
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
-  width: 56%;
+.main__new-task,
+.link__task-input,
+.link__task {
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.main__wrapper {
   display: flex;
 }
 
-ul {
+.main__list {
   margin: 0;
   padding: 0px;
 }
 
-li, 
-h3 {
-  list-style: none;
-}
-
-input,
-button{
-  outline: none;
-}
-
-button {
+.main__new-task-button,
+.link__delete-button,
+.list__edit-button {
   background: none;
   border: 0px;
   color: #888;
@@ -69,13 +71,14 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.main__new-task-button:hover,
+.link__delete-button:hover,
+.list__edit-button:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.main__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +88,8 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.main__new-task,
+.link__task-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,22 +102,18 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.main__new-task:focus,
+.link__task-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
-  display: block;
+.main__title:first-child {
   margin: 0 0 20px;
 }
 
-input#new-task {
-  width: 318px;
-}
-
 /* Task list */
-li {
+.main__link {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -122,51 +122,43 @@ li {
   align-items: center;
 }
 
-li > * {
-  vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.link__checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.link__task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
-  width: 226px;
-}
-
-button.delete img {
+.link__delete-image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.link__delete-image:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.link__task-label_completed {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.link__task-input {
   display: none;
 }
 
-ul li.editmode input[type=text] {
+.link__task-input_edit {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editmode label {
+.link__task-label_edit {
   display: none;
 }
